# ndarrow

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
src/ndarrow/: __init__.py  fixed.py  ragged.py  tensor.py
src/pyarrow_ragged/: __init__.py  fixed.py  ragged.py
tests/: test_fixed.py  test_ragged.py  test_tensor.py
