[project]
name = "ndarrow"
version = "0.1.0"
description = "PyArrow extension types for storing fixed-shape and ragged tensors"
readme = "README.md"
authors = [
    { name = "nullptr", email = "3621629+0x0L@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25",
    "pyarrow>=14",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
